<resources>
    <string name="app_name">Campus</string>
    <string name="action_settings">Settings</string>


    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="title_activity_maps">Map</string>

    <string name="continue_withput_login">Continue without login. </string>

    <string name="forgot_password"> Forgot Password. </string>

    <string name="title_theory">Theory</string>
    <string name="title_intro">Introduction</string>
    <string name="title_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello...</string>
    <string name="slide_1_desc">High Sk-i developers presents you</string>

    <string name="slide_2_title">Flash\n+\nC</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="prompt_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="title_activity_question_display">QuestionDisplay</string>
    <string name="title_activity_quiz__question_display">Quiz_Question_display</string>
    <string name="title_activity_notifications">Notifications</string>

    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_register">New user, tap here to register !</string>
    <string name="register">Register</string>

    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="adding_user_to_db">Adding user to database.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>

    <string name="font_family_roboto_light">sans-serif-thin</string>
    <string name="type_a_message">Type a message...</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="cancel">Cancel</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

</resources>
