<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="50dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll_Register"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingBottom="30dp"
            android:paddingRight="20dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_name" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_rollid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_rollid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="15"
                    android:inputType="text"
                    android:hint="College Id" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="none"
                    android:editable="false"
                    android:hint="Date of Birth" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_email1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email" />
            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_aadhar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_aadhar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="12"
                    android:inputType="number"
                    android:hint="Aadhar Number" />
            </android.support.design.widget.TextInputLayout>





            <Spinner
                android:id="@+id/spinner_course"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
               />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_college"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_college"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:maxLength="1"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="Year" />
            </android.support.design.widget.TextInputLayout>





            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="Password Again" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/selector"
                android:text="@string/btn_register"
                android:textColor="@color/white" />

            <!-- Link to Login Screen -->

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        />

</FrameLayout>